Update news headlines to use meta attributes

--- a/index.html
+++ b/index.html
@@ -1,5 +1,12 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <style>
+        .fake {
+            font-style: italic;
+        }
+    </style>
+</head>
 <body>
     <div class="search-bar">
         <input type="text" placeholder="검색어를 입력해주세요" />
@@ -18,19 +25,19 @@
         <h2>뉴스 헤드라인</h2>
         <ul id="news-list">
             <li class="news">
-                <h1>가짜뉴스 헤드라인 1</h1>
+                <h1 meta="fake">가짜뉴스 헤드라인 1</h1>
                 <p>가짜뉴스 본문요약 1</p>
             </li>
             <li class="news">
-                <h1>가짜뉴스 헤드라인 2</h1>
+                <h1 meta="fake">가짜뉴스 헤드라인 2</h1>
                 <p>가짜뉴스 본문요약 2</p>
             </li>
             <li class="news">
-                <h1>진짜뉴스 헤드라인</h1>
+                <h1 meta="real">진짜뉴스 헤드라인</h1>
                 <p>진짜뉴스 본문요약</p>
             </li>
             <li class="news">
-                <h1>가짜뉴스 헤드라인 3</h1>
+                <h1 meta="fake">가짜뉴스 헤드라인 3</h1>
                 <p>가짜뉴스 본문요약 3</p>
             </li>
         </ul>
